# Kernels

./: CMakeLists.txt  setup.py  test.py
Ternarus/: __init__.py
include/: quantize.h
include/ternarus/: matMul.h  ternMatMul.h  vectorAdd.h
src/: bindings.cpp  quantize.cpp
src/cpu/: matMul_cpu.cpp  ternMatMul_cpu.cpp  vectorAdd_cpu.cpp
src/examples/: compare_terMatmul_Matmul_gpu.cpp  matmul.cpp  ternMatmul.cpp  vectorAdd.cpp
src/gpu/: matMul_gpu.cu  ternMatMul_gpu.cu  vectorAdd_gpu.cu
